--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -7,6 +7,7 @@
   background-position: center;
   min-height: 100vh;
   background-image: url('/images/img.jpg');
+  background-attachment: fixed;
 }
  
 .background{
@@ -18,6 +19,7 @@
   background-position: center;
   min-height: 100vh;
   background-image: url('/images/img.jpg');
+  background-attachment: fixed;
 }
 
 .username{
@@ -45,6 +47,7 @@
 .pagetitle{
   color: white;
   text-decoration: none;
+  cursor: default;
 }
 
 .background{
@@ -307,32 +310,47 @@ i{
   margin-top: -20px;
   margin-left: -10%;
 }
-
+/*
 .titlewrapper{
   width: 310px;
   background: transparent;
   border: 2px solid rgba(255, 255, 255, .1);
-  backdrop-filter: blur(30px) ;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(2px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   padding: 15px 20px;
   background:
   linear-gradient(
-    rgba(0, 0, 0, 0.4), 
-    rgba(0, 0, 0, 0.4)
+    rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 0.5)
   )
 }
 
 .buttonwrapper{
   background: transparent;
   border: 2px solid rgba(255, 255, 255, .1);
-  backdrop-filter: blur(30px);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(2px);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   background:
   linear-gradient(
-    rgba(0, 0, 0, 0.4), 
-    rgba(0, 0, 0, 0.4)
+    rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 0.5)
   );
   align-content: center;
+}
+*/
+a {
+  cursor: pointer;
+}
+
+.navBar{
+  border-radius: 10px;
+  backdrop-filter: blur(20px) ;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(
+    rgba(0, 0, 0, 0.5), 
+    rgba(0, 0, 0, 0.5)
+  );
+  border: 2px solid rgba(252, 252, 252, 0.1);
 }
